# generative-ai-project-template

./: .env.example  .env.example.docker  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ollama  Makefile  README.md  docker-compose-cuda.yml  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  package-lock.json  properdocs.yml  pyproject.toml
.github/: renovate.json
.github/actions/install-python-deps/: action.yml
.github/workflows/: ci.yml  main-release.yml  quality-and-tests.yml  test-deploy.yaml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
backend/: pyproject.toml
backend/src/genai_template_backend/: app.py  backend_settings.py  env_settings.py  utils.py
backend/src/genai_template_backend/api/: llm.py
backend/src/genai_template_backend/api/routes/: chat.py
docs/examples/: index.html
docs/examples/SUMMARY/: index.html
docs/examples/example/: index.html
frontend/: pyproject.toml
frontend/src/: Sidebar.tsx
frontend/src/genai_template_frontend/: frontend_settings.py  main.py  utils.py
frontend/src/genai_template_frontend/components/: chat.py
frontend/src/pages/: DashboardPage.tsx  DemoStorePage.tsx
frontend/src/widget/: VirtualTryOnWidget.tsx
makefiles/: build.mk  check_format.mk  ci.mk  clean.mk  common.mk  dev.mk  docker.mk  install.mk  ollama.mk  run.mk  test.mk
package/SUMMARY/: index.html
package/api/api/: index.html
package/api/api_route/: index.html
package/api/log_config/: index.html
package/evaluation/configs/config_baseline/: index.html
package/evaluation/configs/config_json/: index.html
package/evaluation/context/: index.html
package/evaluation/metrics/data_types/: index.html
package/evaluation/metrics/information_extraction/entity_level/: index.html
package/evaluation/metrics/information_extraction/exact_match_json/: index.html
package/evaluation/metrics/information_extraction/missing_fields/: index.html
package/evaluation/metrics/information_extraction/similarity_json/: index.html
package/evaluation/metrics/order_aware/reciprocal_rank/: index.html
package/evaluation/metrics/utils/: index.html
package/main_backend/: index.html
package/main_frontend/: index.html
package/ml/ai/: index.html
package/pages/0_azure_chat/: index.html
package/pages/1_azure_rag/: index.html
package/pages/2_fastapi_azure_rag/: index.html
package/pages/3_promptfoo/: index.html
package/pages/4_giskard/: index.html
package/settings/: index.html
package/utils/: index.html
search/: search_index.json
src/: settings.py
src/evaluation/configs/: config_simple.yaml
tests/: test_cuda.py  test_llm.py  test_llm_endpoint.py  test_ollama_endpoint.py  test_settings.py
tests/api/: chat.py  test_chat.py
tryon-api/: pyproject.toml
tryon-api/src/tryon_api/: __init__.py  app.py  env_settings.py  ui.py  utils.py
tryon-api/src/tryon_api/ai/: comfyui_client.py  fashn_client.py  tryon_workflow.py
tryon-api/src/tryon_api/api/routes/: tryon.py
(+12 files in other folders)
