[project]
name = "genai-template-backend"
version = "1.0.0"
description = "This is the backend for the Generative ai project template."
requires-python = ">=3.14,<3.15"
dependencies = [

  # software engineering & api
  "fastapi[standard]",
  "asyncio==4.0.0",
  "numpy==2.4.6",
  "pandas",
  "itsdangerous",

  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "loguru==0.7.3",
  "requests==2.34.2",

  #llm
  "litellm==1.84.0",
  "ollama==0.6.2",
  "instructor==1.15.1",


]

[project.optional-dependencies]
cpu = [
  "torch==2.12.0",
]
cuda = [
  "torch==2.12.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu132", extra = "cuda",   marker = 'sys_platform == "linux" or sys_platform == "win32"' },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
