[project]
name = "genai-template-frontend"
version = "0.1.0"
description = "This is the frontend for the Generative ai project template."
requires-python = ">=3.12, <3.14"
dependencies = [
  "nicegui==3.7.1",
  "loguru==0.7.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
