[project]
name = "genai-template-frontend"
version = "1.2.0"
description = "This is the frontend for the Generative ai project template."
requires-python = ">=3.14,<3.15"
dependencies = [
  "nicegui>=3.8.0",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
